fixtures/errors/tdz.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: cannot access `x` before initialisation
 --> errors/tdz.js:1:15
1 | { console.log(x); let x = 1; }
  |               ^

